--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -5,6 +5,7 @@
 
 body {
   font-family: 'Pacifico', cursive;
+  overflow: hidden;
 }
 
 #locations {
@@ -23,8 +24,8 @@ body {
 }
 
 #map {
-    width: 100%;
-    height: 100vh;
+  width: 100%;
+  height: 100vh;
 }
 
 h3 {
@@ -37,6 +38,7 @@ h4 {
 
 #locationInfo {
   padding: 1em;
+
   p {
     font-size: small;
     color: rgb(50, 50, 50);
