--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -15,7 +15,7 @@ body {
   background-color: rgba(0, 0, 0, 0.50);
 }
 
-#mydivheader {
+#locationsheader {
   padding: 10px;
   cursor: move;
   z-index: 10;
